# table_maker

./: Cargo.toml
src/: argument.rs  lib.rs  simple_statement.rs  statement.rs  substitution.rs
src/parse/: mod.rs  token.rs
src/statement/: mod.rs  pattern_match.rs  pattern_statement.rs  proposition.rs
