[package]
name = "table_maker"
version = "0.1.0"
authors = ["Carson Swoveland <sciencedude2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "table_maker"
path = "src/bin/main.rs"

[lib]
name = "table_maker"
path = "src/lib.rs"


[dependencies]
lazy_static = "1.4.0"
itertools = "0.8.2"
bnf = "0.3.0"